# oroswap-core

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.build  README.md  inspect_optimizer.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: docs.yml
contracts/factory/: Cargo.toml  README.md
contracts/factory/examples/: factory_schema.rs
contracts/factory/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/factory/tests/: factory_helper.rs  integration.rs  migration_test.rs
contracts/pair/: Cargo.toml  README.md
contracts/pair/src/: contract.rs  error.rs  mock_querier.rs  state.rs  testing.rs
contracts/pair/tests/: integration.rs
contracts/pair_concentrated/: Cargo.toml  README.md
contracts/pair_concentrated/examples/: pair_concentrated_schema.rs
contracts/pair_concentrated/src/: contract.rs  error.rs  queries.rs  state.rs  utils.rs
contracts/pair_concentrated/tests/: helper.rs  pair_concentrated_integration.rs  pair_concentrated_simulation.rs
contracts/pair_stable/: Cargo.toml  README.md
contracts/pair_stable/examples/: pair_stable_schema.rs
contracts/pair_stable/src/: contract.rs  error.rs  math.rs  mock_querier.rs  state.rs  testing.rs  utils.rs
contracts/pair_stable/tests/: helper.rs  integration.rs  stablepool_tests.rs
contracts/periphery/fee_granter/: Cargo.toml  README.md
contracts/periphery/fee_granter/src/: contract.rs  error.rs  query.rs  state.rs
contracts/periphery/fee_granter/tests/: fee_granter_integration.rs
contracts/periphery/pool_initializer/: Cargo.toml  README.md
contracts/periphery/pool_initializer/examples/: usage.rs
contracts/periphery/pool_initializer/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/periphery/pool_initializer/tests/: integration.rs
contracts/router/: Cargo.toml  README.md
contracts/router/examples/: router_schema.rs
contracts/router/src/: contract.rs  operations.rs  state.rs
contracts/router/src/testing/: mock_querier.rs  tests.rs
contracts/router/tests/: factory_helper.rs  router_integration.rs
contracts/tokenomics/incentives/: Cargo.toml  README.md
contracts/tokenomics/incentives/examples/: incentives_schema.rs  serialization_cost.rs
contracts/tokenomics/incentives/src/: error.rs  execute.rs  instantiate.rs  migrate.rs  query.rs  reply.rs  state.rs  traits.rs  utils.rs
contracts/tokenomics/incentives/tests/: incentives_integration_tests.rs  incentives_simulations.rs
contracts/tokenomics/incentives/tests/helper/: helper.rs
contracts/tokenomics/maker/: Cargo.toml  README.md
contracts/tokenomics/maker/examples/: maker_schema.rs
contracts/tokenomics/maker/src/: contract.rs  error.rs  migration.rs  reply.rs  state.rs  testing.rs  utils.rs
contracts/tokenomics/maker/tests/: maker_integration.rs
contracts/tokenomics/staking/: Cargo.toml  README.md
contracts/tokenomics/staking/examples/: staking_schema.rs
contracts/tokenomics/staking/src/: contract.rs  error.rs  migrate.rs  state.rs
contracts/tokenomics/staking/tests/: staking_integration.rs
contracts/tokenomics/staking/tests/common/: helper.rs  stargate.rs
contracts/tokenomics/vesting/: Cargo.toml  README.md
contracts/tokenomics/vesting/examples/: vesting_schema.rs
contracts/tokenomics/vesting/src/: contract.rs  state.rs  testing.rs
contracts/tokenomics/vesting/tests/: integration.rs
docs/: .markdownlint.json  README.html  README.md  _config.yml  configuration.md  index.html  index.md  transactions.md
docs/contracts/: factory.md  incentives.md  index.html  index.md  pairs.md  router.md
docs/deployment/: index.html  index.md  testnet.md
docs/events/: factory-events.md  index.html  index.md  pair-events.md  router-events.md
docs/transactions/: index.html  index.md  liquidity-examples.md  pair-create.md  swap-examples.md
e2e/: package-lock.json  package.json
e2e/src/: init.ts  lib.ts
e2e/tests/: tf_astro_flow.test.ts
schemas/astroport-pair-stable/: astroport-pair-stable.json
schemas/oro-token-converter/: oro-token-converter.json
schemas/oroswap-factory/: oroswap-factory.json
schemas/oroswap-incentives/: oroswap-incentives.json
schemas/oroswap-maker/: oroswap-maker.json
schemas/oroswap-native-coin-registry/: oroswap-native-coin-registry.json
schemas/oroswap-oracle/: oroswap-oracle.json
schemas/oroswap-pair/: oroswap-pair.json
schemas/oroswap-pair-concentrated/: oroswap-pair-concentrated.json
schemas/oroswap-pair-converter/: oroswap-pair-converter.json
schemas/oroswap-pair-stable/: oroswap-pair-stable.json
schemas/oroswap-router/: oroswap-router.json
schemas/oroswap-staking/: oroswap-staking.json
schemas/oroswap-tokenfactory-tracker/: oroswap-tokenfactory-tracker.json
schemas/oroswap-vesting/: oroswap-vesting.json
scripts/: build_cw20.sh  build_docker.sh  build_release.sh  build_release_custom.sh  build_single_contract.sh  coverage.sh  devnet.env  devnet_multisig.env  devnet_testing.env  devnet_tetsting_code_ids.env  devnet_with_fee_tier.env  no_docker_build.sh  publish_crates.sh  run.sh  store_code_devnet.sh
scripts/factory/: factory_instantiate.sh  factory_queries.sh  factory_queries_multiple_fee.sh  multisig_factory_instantiate.sh  update_factory_pair_configs.sh
scripts/incentive/: create_incentive_pool_reward.sh  incentive.sh
scripts/maker(treasury)/: collect_fees.sh  instantiate_maker.sh  keeper_bridge_management.sh  query_maker_config.sh  test_keeper_management.sh  update_factory_fee_address.sh
scripts/migration/: inspect_pairs.sh  migrate_pool_initializer.sh  migration_factory.sh  migration_incentives.sh  migration_maker.sh  migration_native_coin_registry.sh  migration_router.sh
scripts/oracle/: consult_oracle.sh  instantiate_oracle.sh
scripts/pcl/: coin_registry.sh  concentrated_pair.sh  pcl_query.sh
scripts/periphery/: instantiate_pool_initializer.sh  test_cw20_pool.sh  test_pool_initializer.sh  update_pool_initializer_config.sh
scripts/router/: instantiate_router.sh  query_txs_router.sh
scripts/stable/: create_stable_pair.sh  query_stable_pair.sh
(+81 files in other folders)
