[package]
name = "oroswap-pair"
version = "1.0.0"
authors = ["Oroswap"]
edition = "2021"
description = "The Oroswap constant product pool contract implementation"
license = "GPL-3.0-only"
repository = "https://github.com/oroswap/oroswap-core"
homepage = "https://www.oroswap.org"
# metadata = { build_variants = ["injective", "sei"] }
metadata = { build_variants = ["zigchain"] }

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
injective = ["oroswap/injective"]
sei = ["oroswap/sei"]
library = []
zigchain = ["oroswap/zigchain"]

[dependencies]
integer-sqrt = "0.1"
oroswap.workspace = true
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"] }
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true

[dev-dependencies]
oroswap-incentives = { path = "../tokenomics/incentives" }
cw20-base = { version = "1.1", features = ["library"] }
oroswap-factory = { path = "../factory" }
proptest = "1.0"
prost = "0.11.5"
oroswap-test = { path = "../../packages/oroswap_test", features = ["cosmwasm_1_1"] }
oroswap-tokenfactory-tracker = { path = "../periphery/tokenfactory_tracker" }
