[package]
name = "oroswap-pair-concentrated"
version = "1.1.0"
authors = ["Oroswap"]
edition = "2021"
description = "The Oroswap concentrated liquidity pair"
license = "GPL-3.0-only"
repository = "https://github.com/oroswap/oroswap-core"
homepage = "https://www.oroswap.org"
#metadata = { build_variants = ["injective", "sei"] }
metadata = { build_variants = ["zigchain"] }

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["zigchain"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []
injective = ["oroswap/injective", "oroswap_pcl_common/injective"]
sei = ["oroswap/sei", "oroswap_pcl_common/sei"]
zigchain = ["oroswap/zigchain", "oroswap_pcl_common/zigchain"]

[dependencies]
oroswap.workspace = true
oroswap-circular-buffer = { path = "../../packages/circular_buffer", version = "1.1.0" }
oroswap_pcl_common = { path = "../../packages/oroswap_pcl_common", version = "1.1.0" }
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"] }
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
itertools.workspace = true
cw-utils.workspace = true

[dev-dependencies]
cw20-base = "1.1"
oroswap-incentives = { path = "../tokenomics/incentives" }
oroswap-test = { path = "../../packages/oroswap_test" }
oroswap-factory = { path = "../factory" }
proptest = "1.0"
anyhow = "1.0"
derivative = "2.2"
oroswap-native-coin-registry = { path = "../periphery/native_coin_registry" }
oroswap-tokenfactory-tracker = { path = "../periphery/tokenfactory_tracker" }
