[package]
name = "oroswap-router"
version = "1.1.0"
authors = ["Oroswap"]
edition = "2021"
description = "The Oroswap router contract - provides multi-hop swap functionality for Oroswap pools"
license = "GPL-3.0-only"
repository = "https://github.com/oroswap/oroswap-core"
homepage = "https://www.oroswap.org"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std.workspace = true
cw-storage-plus = "1.2"
integer-sqrt = "0.1"
oroswap.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
oroswap-factory = { path = "../factory" }
oroswap-pair-concentrated = { path = "../pair_concentrated", version = "1.1.0" }
oroswap-native-coin-registry = { path = "../periphery/native_coin_registry", version = "1.1.0" }
cw20-base = "1.1"
oroswap-pair = { path = "../pair" }
oroswap-test = { path = "../../packages/oroswap_test" }
anyhow = "1.0"
