[package]
name = "oroswap-pool-initializer"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cosmwasm-storage = "1.4"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw20 = "1.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
schemars = "0.8"
oroswap-core = { path = "../../../packages/oroswap-core" }

[dev-dependencies]
cw-multi-test = "0.20"
