[package]
name = "oroswap-incentives"
version = "1.1.0"
authors = ["Oroswap"]
edition = "2021"
description = "Oroswap Incentives Contract distributing rewards to LP stakers"
license = "GPL-3.0-only"
repository = "https://github.com/oroswap/oroswap-core"
homepage = "https://www.oroswap.org"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
cw20 = "1"
cw-utils.workspace = true
oroswap.workspace = true
thiserror.workspace = true
itertools.workspace = true

[dev-dependencies]
anyhow = "1"
oroswap-factory = { path = "../../factory" }
oroswap-pair = { path = "../../pair" }
oroswap-native-coin-registry = { path = "../../periphery/native_coin_registry" }
oroswap-vesting = { path = "../vesting" }
oroswap-test = { path = "../../../packages/oroswap_test" }
cw20-base = "1"
proptest = "1.3"
