[package]
name = "oroswap-maker"
version = "1.7.0"
authors = ["Oroswap"]
edition = "2021"
description = "Oroswap Maker contract"
license = "GPL-3.0-only"
repository = "https://gitlab.com/zig-dex/oro-contracts"
homepage = "https://www.oroswap.org"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
cw20 = "1"
cw-storage-plus.workspace = true
oroswap.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
cw20-base = "1"
oroswap-factory = { path = "../../factory" }
oroswap-pair = { path = "../../pair" }
oroswap-test = { path = "../../../packages/oroswap_test" }
oroswap-native-coin-registry = { path = "../../periphery/native_coin_registry" }
anyhow = "1.0.86"
