[package]
name = "oroswap-staking"
version = "2.3.0"
authors = ["Oroswap"]
edition = "2021"
description = "Oroswap Staking Contract"
license = "GPL-3.0-only"
repository = "https://gitlab.com/zig-dex/oro-contracts"
homepage = "https://www.oroswap.org"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1"] }
cw-storage-plus.workspace = true
thiserror.workspace = true
cw2.workspace = true
oroswap.workspace = true
cw-utils.workspace = true
osmosis-std = "0.21.0"

[dev-dependencies]
anyhow = "1"
itertools.workspace = true
cosmwasm-schema.workspace = true
cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks", features = ["cosmwasm_1_1"] }
oroswap-tokenfactory-tracker = { path = "../../periphery/tokenfactory_tracker" }
