[package]
name = "oroswap-vesting"
version = "1.0.0"
authors = ["Oroswap"]
edition = "2021"
description = "Oroswap Vesting Contract holds tokens and releases them to the beneficiary over time."
license = "GPL-3.0-only"
repository = "https://gitlab.com/zig-dex/oro-contracts"
homepage = "https://www.oroswap.org"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
oroswap.workspace = true
thiserror.workspace = true
cw-utils.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
cw-multi-test = "1.0.0"
cw20-base = "1.1"
